--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "react-router-dom": "^6.0.2",
-    "react-scripts": "4.0.3",
-    "react-scroll-into-view": "^1.10.1",
+    "react-scripts": "^3.4.4",
     "typescript": "^4.4.4",
     "web-vitals": "^1.1.2"
   },
